--- a/static/options.html
+++ b/static/options.html
@@ -2,6 +2,14 @@
 <html>
 <head><title>My Test Extension Options</title></head>
 <body>
+
+<div><span>Session id:</span>
+<span><input style="width:95%" type="text" id="speava_session_id"><br></span>
+</div>
+<br>
+<br>
+<br>
+<br>
 <div><span>Server URL to record captions:</span>
 <span><input style="width:95%" type="text" id="speava_session_record"><br></span>
 </div>
@@ -16,11 +24,11 @@
 </div>
 
 <div>
-<span><input style="width:5%"  type="checkbox" id="speava_session_send_raw"></span>
+<span><input style="width:5%"  type="checkbox" id="speava_session_send_raw" disabled="true"></span>
     <span><label for="speava_session_send_raw">Send captions to analytics server</label></span>
 </div>
 <div>
-<span><input style="width:5%"  type="checkbox" id="speava_session_post"></span>
+<span><input style="width:5%"  type="checkbox" id="speava_session_post" disabled="true"></span>
 <span><label for="speava_session_post" > Send captions to Spreadsheet</label></span>
 </div>
 <div>
