--- a/src/options.html
+++ b/src/options.html
@@ -42,6 +42,9 @@
 <div><span>Arbitrary option settings<br></span>
 <span><textarea id="speava_session_option_string" rows="5" cols="40"></textarea></span>
 </div>
+<div><span>Element position settings<br></span>
+<span><textarea id="speava_session_window_positions" rows="5" cols="40"></textarea></span>
+</div>
 <div id="status"></div>
 <button id="save">Save</button>
 
