--- a/src/options.html
+++ b/src/options.html
@@ -45,6 +45,9 @@
 <div><span>Element position settings<br></span>
 <span><textarea id="speava_session_window_positions" rows="5" cols="40"></textarea></span>
 </div>
+<div><span>Override(force) session name to capture</span>
+<span><input style="width:95%"  type="text" id="speava_session_id"></span>
+</div>
 <div id="status"></div>
 <button id="save">Save</button>
 
