--- a/src/options.html
+++ b/src/options.html
@@ -16,6 +16,10 @@
 </div>
 
 <div>
+<div>
+<span><input style="width:5%"  type="color" id="speava_session_text_color"></span>
+    <span><label for="speava_session_text_color">Choose a color to show texts</label></span>
+</div>
 <span><input style="width:5%"  type="checkbox" id="speava_session_send_raw"></span>
     <span><label for="speava_session_send_raw">Send captions to analytics server</label></span>
 </div>
