--- a/static/options.html
+++ b/static/options.html
@@ -22,6 +22,10 @@
 <div><span>Options to record log when you have problems</span>
 <span><input style="width:95%"  type="text" id="speava_session_log_string"></span>
 </div>
+<div>
+<span><input style="width:5%"  type="color" id="speava_session_text_color"></span>
+    <span><label for="speava_session_text_color">Choose a color to show texts</label></span>
+</div>
 
 <div>
 <span><input style="width:5%"  type="checkbox" id="speava_session_send_raw" disabled="true"></span>
