--- a/src/options.html
+++ b/src/options.html
@@ -25,7 +25,7 @@
 </div>
 <div>
 <span><input style="width:5%"  type="checkbox" id="speava_session_post"></span>
-<span><label for="speava_session_post" > Send captions to Spreadsheet</label></span>
+    <span><label for="speava_session_post" >Send captions to Spreadsheet</label><br>(refer to <a href="https://akinorioyama.com/live-caption-analytics/lca-googlespreadsheet-integration/" target="_blank">this document</a> to create a receiving sheet)</span>
 </div>
 <div>
 <span><input style="width:5%"  type="checkbox" id="speava_session_show"></span>
