--- a/src/options.html
+++ b/src/options.html
@@ -43,10 +43,10 @@
 <span><input style="width:5%"  type="checkbox" id="speava_session_prompt"></span>
 <span><label for="speava_session_prompt">Show popup prompt from server</label></span>
 </div>
-<div><span>Arbitrary option settings<br></span>
+<div><span>Arbitrary option settings<a href="https://akinorioyama.com/live-caption-analytics/help/arbitrary_option_settings" target="_blank">(?)</a><br></span>
 <span><textarea id="speava_session_option_string" rows="5" cols="40"></textarea></span>
 </div>
-<div><span>Element position settings<br></span>
+<div><span>Element position settings<a href="https://akinorioyama.com/live-caption-analytics/help/element_position_settings" target="_blank">(?)</a><br></span>
 <span><textarea id="speava_session_window_positions" rows="5" cols="40"></textarea></span>
 </div>
 <div><span>Override(force) session name to capture</span>
