--- a/src/options.html
+++ b/src/options.html
@@ -53,7 +53,7 @@
 <span><input style="width:95%"  type="text" id="speava_session_id"></span>
 </div>
 <div id="status"></div>
-<button id="save">Save</button>
+<button id="speava_option_save">Save</button>
 
 <script src="options.js"></script>
 </body>
