--- a/src/options.html
+++ b/src/options.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
 <head><title>Extension Options</title></head>
 <body>
 <div><span>Session name to capture<a href="https://akinorioyama.com/live-caption-analytics/help/configure-session-name" target="_blank">(?)</a></span>
 <span><input style="width:95%"  type="text" id="speava_session_id"></span>
 </div>
-<div><span>Server URL to record captions:<a href="https://akinorioyama.com/live-caption-analytics/help/configure-server-url" target="_blank">(?)</a></span>
+<div><span>Server URL to record captions:<a href="https://akinorioyama.com/live-caption-analytics/help/configure-server-url" target="_blank">(?)</a></span><br>
+<span><b>Read the warning and acknowledge the potential risks</b> highlighted in the document to which the link set <b>in above ? mark leads you.</b></span>
+<span><div id="speava_placeholder_for_locked_field"></div></span>
 <span><input style="width:95%" type="text" id="speava_session_record"><br></span>
 </div>
 <div><span>User name to record in caption record and to receive feedback for.</span>
@@ -54,6 +57,16 @@
 <div>
 <span><input style="width:5%"  type="checkbox" id="speava_session_post"></span>
     <span><label for="speava_session_post" >Send captions to Spreadsheet</label><br>(refer to <a href="https://akinorioyama.com/live-caption-analytics/lca-googlespreadsheet-integration/" target="_blank">this document</a> to create a receiving sheet)</span>
+</div>
+<div id="div_language">
+    <br>
+    <span>Language to detect for browser built-in speech recognition</span><br>
+    <span>
+    <select id="select_language">
+    </select>&nbsp;&nbsp; <select id="select_dialect">
+    </select>
+</span>
+
 </div>
 <div id="status"></div>
 <button id="speava_option_save">Save</button>
