--- a/src/options.html
+++ b/src/options.html
@@ -14,6 +14,14 @@
 <div><span>User name to record in caption record and to receive feedback for.</span>
 <span><input type="text" id="speava_session_username"></span>
 </div>
+<div><span>Label that is shown as a name header of the speaker of the user to record the session</span>
+<span><input type="text" id="speava_session_user_caption_label"></span>
+</div>
+<div><span>Label for captions</span>
+<span><input type="text" id="speava_session_caption_label_on"></span>
+<span>/</span><span><input type="text" id="speava_session_caption_label_off"></span>
+<button id="speava_option_propose_caption_label">Load default labels</button>
+</div>
 <div><span>Options to record log when you have problems</span>
 <span><input style="width:95%"  type="text" id="speava_session_log_string"></span>
 </div>
